Fix vertical centering for buttons on recent-notifications Added functionality for furture vertical spacing using mixin, added to main.scss

--- a/source/sass/_btn.scss
+++ b/source/sass/_btn.scss
@@ -51,6 +51,7 @@
   }
 
   &.btn--outline {
+    @include vertical-align();
     @include font(14, 14);
     // font-weight: 400;
     background-color: transparent;
